--- a/Magic_Food/style.css
+++ b/Magic_Food/style.css
@@ -1,91 +1,13 @@
-html,body{
-    width:100%;
-    height:100%;
-}
-.header{
-    display :flex;
-    justify-content: space-between;
-    border: solid 2px black;
-}
-.logo {
-    width:150px;
-    height:100px;
-}
+ @tailwind base;
+ @tailwind components;
+ @tailwind utilities;
 
-.nav-items >ul
-{
-    font-size: 18px;
-    padding :0 20px;
-    display:flex;
-    list-style-type: none;
-}
-.nav-items > ul > li 
-{
-    margin:10px;
-    padding :5px;
-   
-}
+ a.active {
+         color: red;
+ }
 
-.res-card 
-{
-    width:220px;
-    height: 100%;
-    padding: 5px;
-    background-color: #f0f0f0c7;
-    overflow:hidden;
-
-  
-}
-.res-card:hover{
-    cursor: pointer;
-    border: solid 1px black;
-}
-.top-rated{
-    padding:10px; 
-    display: flex;
-    
-}
-
-.res-logo
-{
-    width:100%; 
-    height:150px; 
-}
-.res-container
-{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-
-}
-.shimmer-card
-{
-    margin:5px;
-    width:250px;
-    height:300px;
-    border:1px solid black;
-    background-color: #f0f0f0c8;
-    
-}
-.login-btn
-{
-    width:60px;
-    height:40px;
-}
-.search-box
-{
-    padding:5px;  
-}
-.active{
-    color:red;
-}
-.user-card
-{
-    padding:10px;
-    border:1px solid black;
-
-}
+ * {
+         margin: 0;
+         padding: 0;
+         box-sizing: content-box;
+ }
